--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <p>I got a vewwy good taste in food and wont settle for annything less than a good tuna. lalalala lla la l al ala l
           alallalalalalallallalalalalallallalalalalallallalalalalallallalalalalall
           lallalalalalallallalalalalallallalalalalallallalalalalal </p>
+          <p>Titta vad man kan göra</p>
         </div>
       </div>
       <hr>
@@ -55,6 +56,5 @@
       <a class="footer-link" href="https://github.com/">GitHub</a>
       <p>© 2021 Oskar Sjöberg.</p>
     </div>
-
   </body>
 </html>
